objects/SVMXC__RMA_Shipment_Order__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Fulfillment_Type__c</fullName>
        <label>Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartnerRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the indication of Partner Record.</description>
        <inlineHelpText>This is the indication of Partner Record.</inlineHelpText>
        <label>IsPartnerRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartner__c</fullName>
        <description>Flag Indicates if record is a Partner Record or not.</description>
        <formula>IF(  SVMXC__IsPartnerRecord__c  ,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag Indicates if record is a Partner Record or not.</inlineHelpText>
        <label>IsPartner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Order</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>Parts Orders (Master Order)</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_of_units_returned__c</fullName>
        <label>Number of units returned</label>
        <summarizedField>SVMXC__RMA_Shipment_Line__c.SVMXC__Expected_Quantity2__c</summarizedField>
        <summaryForeignKey>SVMXC__RMA_Shipment_Line__c.SVMXC__RMA_Shipment_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Status__c</fullName>
        <description>Current status of the RMA/Shipment order</description>
        <inlineHelpText>Current status of the RMA/Shipment order</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Type__c</fullName>
        <description>Order Type</description>
        <inlineHelpText>Choose the Order type</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Parts Request</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>HFE</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account, Set by Trigger.</description>
        <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts Orders (Partner Account)</relationshipLabel>
        <relationshipName>RMA_Shipment_Order_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parts Orders (Partner Contact)</relationshipLabel>
        <relationshipName>RMA_Shipment_Order_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parts_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ServiceMax Parts Request for which this shipment order was created.</description>
        <inlineHelpText>The ServiceMax Parts Request for which this shipment order was created.</inlineHelpText>
        <label>Parts Request</label>
        <referenceTo>SVMXC__Parts_Request__c</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Priority of the parts order</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Age_Bucket__c</fullName>
        <description>Age of the RMA placed in various buckets for reporting</description>
        <formula>IF ((TODAY() - SVMXC__Expected_Receive_Date__c) &lt; 0, &quot;Not due yet&quot;, 
IF ((TODAY() - SVMXC__Expected_Receive_Date__c) = 0, &quot;Due Today&quot;, 
IF (AND( (TODAY() - SVMXC__Expected_Receive_Date__c) &gt; 0, (TODAY() - SVMXC__Expected_Receive_Date__c) &lt;= 7), &quot;Less Than 8 days&quot;, 
IF ((TODAY() - SVMXC__Expected_Receive_Date__c) &lt;= 15, &quot;8 To 15 days&quot;, 
IF ((TODAY() - SVMXC__Expected_Receive_Date__c) &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the RMA placed in various buckets for reporting</inlineHelpText>
        <label>RMA Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Type__c</fullName>
        <label>RMA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Receiving_Courier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the courier company the customer used to ship the product. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Name of the courier company the customer used to ship the product. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Receiving Courier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RMA_Shipment_Order_Rcv_Courier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SESSION_ID__c</fullName>
        <description>Not used</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESSION_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Order_Number__c</fullName>
        <description>Sales order number reference for this shipment if available.</description>
        <inlineHelpText>Sales order number reference for this shipment if available.</inlineHelpText>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</description>
        <inlineHelpText>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</inlineHelpText>
        <label>Service Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Order related to this RMA/shipment order. Is a lookup to an existing service order record in ServiceMax</description>
        <inlineHelpText>Service Order related to this RMA/shipment order. Is a lookup to an existing service order record in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment_Age_Bucket__c</fullName>
        <description>Age of the shipment grouped in various buckets for reporting.</description>
        <formula>IF (AND( (TODAY() - SVMXC__Expected_Delivery_Date__c) &gt; 0, (TODAY() - SVMXC__Expected_Delivery_Date__c) &lt;= 7), &quot;Less Than 8 days&quot;, 
IF ((TODAY() - SVMXC__Expected_Delivery_Date__c) &lt;= 15, &quot;8 To 15 days&quot;, 
IF ((TODAY() - SVMXC__Expected_Delivery_Date__c) &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the shipment grouped in various buckets for reporting.</inlineHelpText>
        <label>Shipment Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to another RMA or shipment order number within ServiceMax</description>
        <inlineHelpText>Reference to another RMA or shipment order number within ServiceMax</inlineHelpText>
        <label>Parts Order Reference</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipping_Courier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the courier company used to ship the product. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Name of the courier company used to ship the product. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Shipping Courier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RMA_Shipment_Order_Shp_Courier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipping_Receiving_Notes__c</fullName>
        <description>Instructions for shipping department/courier if it is a shipment, or for the receiving department if it is an RMA. Free text entry.</description>
        <inlineHelpText>Instructions for shipping department/courier if it is a shipment, or for the receiving department if it is an RMA. Free text entry.</inlineHelpText>
        <label>Shipping/Receiving Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipping_Terms__c</fullName>
        <description>List indicates the standard shipping terms such as FOB (Free On Board), EXW (EX Works) etc.</description>
        <inlineHelpText>List indicates the standard shipping terms such as FOB (Free On Board), EXW (EX Works) etc.</inlineHelpText>
        <label>Shipping Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                </value>
                <value>
                    <fullName>DDU</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Source_City__c</fullName>
        <description>“City” part of the source address</description>
        <inlineHelpText>“City” part of the source address</inlineHelpText>
        <label>From City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Source_Country__c</fullName>
        <description>“Country” part of the source address</description>
        <inlineHelpText>“Country” part of the source address</inlineHelpText>
        <label>From Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the internal/customer site from which the products are shipped. Is a lookup to an existing site record in ServiceMax</description>
        <inlineHelpText>Name of the internal/customer site from which the products are shipped. Is a lookup to an existing site record in ServiceMax. Choose an existing site OR enter address details.</inlineHelpText>
        <label>From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Parts Orders (Source Location)</relationshipLabel>
        <relationshipName>RMA_Shipment_Order_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Source_State__c</fullName>
        <description>“State/Province” part of the source address</description>
        <inlineHelpText>“State/Province” part of the source address</inlineHelpText>
        <label>From State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Source_Street__c</fullName>
        <description>“Street” part of the source address</description>
        <inlineHelpText>“Street” part of the source address</inlineHelpText>
        <label>From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Source_Zip__c</fullName>
        <description>“Zip/Postal Code” part of the source address</description>
        <inlineHelpText>“Zip/Postal Code” part of the source address</inlineHelpText>
        <label>From Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier related to the RMA/Shipment</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts Orders (Supplier)</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Price2__c</fullName>
        <description>Sum of line price. Calculated automatically</description>
        <inlineHelpText>Total Price</inlineHelpText>
        <label>Total Price</label>
        <summarizedField>SVMXC__RMA_Shipment_Line__c.SVMXC__Total_Line_Price2__c</summarizedField>
        <summaryForeignKey>SVMXC__RMA_Shipment_Line__c.SVMXC__RMA_Shipment_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__Tracking_Number__c</fullName>
        <description>Shipment tracking number given by the courier company</description>
        <inlineHelpText>Shipment tracking number given by the courier company</inlineHelpText>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warehouse__c</fullName>
        <description>Name/number of the warehouse from/to which the products will be shipped</description>
        <inlineHelpText>Name/number of the warehouse from/to which the products will be shipped</inlineHelpText>
        <label>Warehouse</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_Failure_Analysis_Hold_for_Eng__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure Analysis / Hold for Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Method__c</fullName>
        <label>Shipment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>2 Day</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>Hand Carried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <label>Shipping Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Special Instructions</description>
        <label>Code Not in System</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <description>Storage Location added to Parts Order for use in SFM to Create WO from Parts Order/RMA</description>
        <label>Storage Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1406 - Material Review</fullName>
                    <default>true</default>
                    <label>1406 - Material Review</label>
                </value>
                <value>
                    <fullName>1401 - Main Store</fullName>
                </value>
                <value>
                    <fullName>1402 - Return Staging</fullName>
                </value>
                <value>
                    <fullName>1403 - Mfg. Test</fullName>
                </value>
                <value>
                    <fullName>1405- Order Conversion</fullName>
                </value>
                <value>
                    <fullName>1407- Return to Vendor</fullName>
                </value>
                <value>
                    <fullName>1408 - Production Engineering, Restricted</fullName>
                </value>
                <value>
                    <fullName>1427 - EITNY</fullName>
                </value>
                <value>
                    <fullName>1428 - MHV, Restricted</fullName>
                </value>
                <value>
                    <fullName>1429 - Tested Stores</fullName>
                </value>
                <value>
                    <fullName>1430 - SJ R&amp;D, Restricted</fullName>
                </value>
                <value>
                    <fullName>1436 - Viper Group</fullName>
                </value>
                <value>
                    <fullName>1499 - Inventory Variance</fullName>
                </value>
                <value>
                    <fullName>1451 - San Jose</fullName>
                </value>
                <value>
                    <fullName>1452 - Eindhoven</fullName>
                </value>
                <value>
                    <fullName>1453 - Japan</fullName>
                </value>
                <value>
                    <fullName>1454 - Service Parts QC</fullName>
                </value>
                <value>
                    <fullName>1455 - Repairs Saturn</fullName>
                </value>
                <value>
                    <fullName>1456 - Hamburg</fullName>
                </value>
                <value>
                    <fullName>1457 - IBM Germany</fullName>
                </value>
                <value>
                    <fullName>1458 - Mexico</fullName>
                </value>
                <value>
                    <fullName>1459 - SJ In Transit</fullName>
                </value>
                <value>
                    <fullName>1460 - Austin</fullName>
                </value>
                <value>
                    <fullName>1461 - Chelmsford</fullName>
                </value>
                <value>
                    <fullName>1462 - Canada</fullName>
                </value>
                <value>
                    <fullName>1463 - Hamburg</fullName>
                </value>
                <value>
                    <fullName>1464 - Korea</fullName>
                </value>
                <value>
                    <fullName>1465 - Munich</fullName>
                </value>
                <value>
                    <fullName>1467 - Taiwan</fullName>
                </value>
                <value>
                    <fullName>1468 - Yokohama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Level__c</fullName>
        <description>System Level</description>
        <label>System Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Location_City__c</fullName>
        <formula>SVMXC__Destination_Location__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location_Country__c</fullName>
        <formula>Text(SVMXC__Destination_Location__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location_State__c</fullName>
        <formula>SVMXC__Destination_Location__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location_Street__c</fullName>
        <formula>SVMXC__Destination_Location__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location_Zip__c</fullName>
        <formula>SVMXC__Destination_Location__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Notes__c</fullName>
        <label>Work Order Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Performed__c</fullName>
        <description>Work Performed</description>
        <label>Work Performed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Parts Order</label>
    <listViews>
        <fullName>SVMXC__All_RMA</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Case__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Order_Type__c</columns>
        <columns>SVMXC__Order_Status__c</columns>
        <columns>SVMXC__Billing_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVMXC__RMA_Shipment_Order__c.SVMXC__RMA</value>
        </filters>
        <label>All RMA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SVMXC__All_Shipments</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Case__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Order_Status__c</columns>
        <columns>SVMXC__Order_Type__c</columns>
        <columns>SVMXC__Billing_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVMXC__RMA_Shipment_Order__c.SVMXC__Shipment</value>
        </filters>
        <label>All Shipments</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Orders</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__RMA</fullName>
        <active>true</active>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Shipment</fullName>
        <active>true</active>
        <label>Shipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Return_Carrier</fullName>
        <active>true</active>
        <description>Other Return Carrier Name - Must be completed when &quot;other&quot; selected from Return Carrier pick list.</description>
        <errorConditionFormula>AND( ISPICKVAL(Return_Carrier_from_Co__c, &quot;other&quot;),
 ISBLANK(Other_Return_Carrier__c ))</errorConditionFormula>
        <errorDisplayField>Other_Return_Carrier__c</errorDisplayField>
        <errorMessage>You must enter the &quot;Other Return Carrier&quot; name when &quot;Other&quot; is selected from the Return Carrier picklist</errorMessage>
    </validationRules>
</CustomObject>